# cable.rs

./: Cargo.toml  README.md  readme.md
cable/: Cargo.toml  README.md
cable/examples/: README.md  messages.rs  types.rs
cable/src/: constants.rs  error.rs  lib.rs  message.rs  post.rs  store.rs  stream.rs  validation.rs
cable_core/: Cargo.toml  README.md
cable_core/examples/: chat.rs  stream.rs
cable_core/src/: lib.rs  manager.rs  store.rs  stream.rs
cable_core/tests/: channel_state.rs  channel_time_range.rs  request_response.rs
desert/: Cargo.toml  README.md
desert/src/: error.rs  lib.rs  varint.rs
desert/tests/: builtins.rs  custom.rs
examples/: chat.rs
examples/hyperchat/: Cargo.toml  main.rs
handshake/: .gitignore  AUTHORS  Cargo.toml  Cargo.toml.license  README.md  flamegraph.svg.license  plan
handshake/benches/: handshake_sync.rs  message_sync.rs
handshake/examples/: README.md  async_tcp.rs  basic.rs  cli.rs  handshake.rs  tcp.rs  unix.rs
handshake/src/: constants.rs  error.rs  lib.rs  post_handshake.rs  utils.rs  version.rs
handshake/src/async_std/: handshake.rs
handshake/src/sync/: handshake.rs  mod.rs
handshake/tests/: async_handshake.rs  sync_handshake.rs
handshake/tests/interop/: fungi.txt  mushrooms.txt  run.sh  run.sh.license  tao.txt  taoism.txt  taoism.txt.license
length_prefixed_stream/: Cargo.toml  README.md
length_prefixed_stream/examples/: decode.rs
length_prefixed_stream/src/: error.rs  lib.rs  unfold.rs
length_prefixed_stream/tests/: decode.rs  options.rs
src/: cable.rs  error.rs  lib.rs  message.rs  post.rs  store.rs  stream.rs
