[package]
name = "cable"
version = "1.0.0"
edition = "2018"

[dependencies]
sodiumoxide = "0.2.6"
desert = "2.0.0"
async-std = { version = "1.10.0", features = ["attributes","unstable"] }
futures = "0.3.12"
length-prefixed-stream = { path = "../../length-prefixed-stream.rs" }

[dev-dependencies]
argmap = "1.1.1"
