[package]
name = "cable_core"
version = "1.0.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes","unstable"] }
async-trait = "0.1.71"
cable = { path = "../cable" }
futures = "0.3.28"
desert = { path = "../desert" }
length-prefixed-stream = { path = "../length_prefixed_stream" }
signature = "2.1.0"
sodiumoxide = "0.2.7"

[dev-dependencies]
argmap = "1.1.2"
