[package]
description = "decode a byte stream of varint length-encoded messages into a stream of chunks"
edition = "2018"
license = "BSD-3-Clause"
name = "length-prefixed-stream"
readme = "readme.md"
version = "1.1.0"

[dependencies]
desert = { path = "../desert" }
futures = { version = "0.3.29", default-features = false, features = ["std"] }
pin-project-lite = "0.2.10"

[dev-dependencies]
smol = "1.3.0"
