[package]
name = "example-hyperchat"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "hyperswarm"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperswarm = { git = "https://github.com/datrs/hyperswarm-rs.git" }
# hyperswarm = { path = "../../../hyperswarm" }
cable = { path = "../.." }
async-std = "1.11.0"
argmap = "1.1.1"
env_logger = "0.9.0"
